Fixed overflow, pt2

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1231,7 +1231,9 @@ thead .fc-day-today .fc_daygeader__title::after {
 }
 
 .cf_dayfeel {
+  position: relative;
   order: -2;
+  z-index: 100;
 }
 
 .fc-daygrid-day-number {
